# Netra

./: .dockerignore  .gitignore  AUDIT_v2.3.md  Audit_v2.2.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  README.md  ROADMAP.md  TASKS.md  debug_deps.py  docker-compose.override.yml  docker-compose.v2.yml  docker-compose.yml  fix_compose.py  netra_logs.txt  pyproject.toml  run.py
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  helm-test.yml  issue-greeter.yml  permission_guard.yml  pr-bot.yml  pr-greeter.yml  pr-review-check.yml  stale.yml  triage.yml  welcome.yml
deploy/helm/netra/: Chart.yaml  values.yaml
deploy/v2/: setup_v2.sh  verify_connectivity.py
ghost/: CMakeLists.txt
ghost/src/: main.cpp
guard/: Cargo.toml
guard/src/: main.rs
netra/: api.Dockerfile  inspect_db.py  main.py  migrate_v1.py  worker.Dockerfile
netra/api/: Dockerfile  main.py  models.py
netra/api/routes/: scan.py
netra/api/static/: app.js  style.css
netra/api/templates/: index.html
netra/core/: Dockerfile  auth.py  compliance.py  database.py  engine.py  http.py  neograph.py  reporter.py  scanner.py  worker.py
netra/core/analysis/: ruby_bridge.py
netra/core/discovery/: dns_resolver.py
netra/core/graph/: model.py
netra/core/ingestion/: worker.py
netra/core/modules/: acquisition.py  api_fuzzer.py  asm.py  cloud.py  cpp_bridge.py  go_bridge.py  graphql.py  http.py  iam.py  iot.py  network.py  pentest.py  recon.py  resilience.py  ruby_bridge.py  rust_bridge.py  secrets.py  threat.py
netra/core/orchestration/: messaging.py
netra/core/reporting/: pdf.py
netra/integrations/: defectdojo.py
netra/ml/: brain.py  train.py  zombie_hunter.py
netra/scans/ruby/: banner_grabber.rb  dos_check.rb  iam_scan.rb  mqtt_audit.rb  rce_scan.rb  resilience_scan.rb  robots_analyzer.rb  threat_scan.rb  zombie_scan.rb
netra/static/: index.html  neural.html
netra/tests/: test_api.py  test_ml.py
netra/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
netra/ui/src/: App.jsx  App.tsx  index.css
netra/ui/src/views/: Assets.tsx  (+6 more)
netra/workers/: ingest.py  ml_analysis.py
scout/: go.mod  main.go
tests/: test_bridges.py  test_core.py  test_ml.py  test_qa.py  test_ruby_bridge.py  test_scanners.py  test_threat_logic.py
vortex/: main.py
vortex/api/: main.py
vortex/api/static/: app.js  style.css
vortex/api/templates/: index.html
vortex/core/modules/: api_fuzzer.py
(+11 files in other folders)
