[tool.poetry]
name = "netra"
version = "0.1.0"
description = "Netra Async Vulnerability Scanner"
authors = ["PoojasPatel013"]
readme = "README.md"
packages = [{include = "netra"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
aiodns = "^3.1.1"
cchardet = "^2.1.7"
typer = ">=0.9.0,<0.12.0"
rich = "<14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gmqtt = "^0.6.11"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
jinja2 = "^3.1.3"
# uvloop is excluded for Windows compatibility
redis = "^5.0.1"
neomodel = "^5.2.0"
tldextract = "^5.1.0"
click = "<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
aioresponses = "^0.7.6"
bandit = "^1.7.8"
safety = "^3.1.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
